...
            style={iconColor}
          />
          <Text style={[
            header.shadowHeader,
            header.text,
          ]}
            testID={"postHeader"}
          >
            { name }
          </Text>
          { !!hourly && this.renderHourly(data) }
        </View>
      </React.Fragment>
...
