...
    const { id } = this.post
    const { goBack } = this.props.navigation
    if (this.validator.valid) {
      const response = await this.api.updatePost(id, this.params)
      goBack()
    } else {
      const errorMessage = this.validator.errors
      this.setState({ errors: true, errorMessage })
    }
  }

  render() {
    const { email, flag_reason, errors, errorMessage, password } = this.state
...
            styles.input,
            styles.email,
            borderColor
          ]}
          placeholder="Your Email" 
          placeholderTextColor={"#a6a6a6"}
          autoCompleteType="email"
          keyboardType="email-address"
          autoCapitalize="none"
          onChangeText={text => this.onChangeEmail(text)}
          value={email}
        />
        <TextInput
...
